test/invalid/undeclared_variable.qt
function main() -> int {
    int a = x + 5; 
    return a;
}